# ifc2indoorgml

./: CMakeLists.txt  LCC_SpecialOps.cpp  LCC_SpecialOps.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  Viewer.cpp  Viewer.h  about_IFC_to_IndoorGML.html  ifc2indoorgml.qrc  main.cpp  typedefs.h
modules/ifc2lcc/: IFC2LCC.cpp  IFC2LCC.h  IFC_Importer.cpp  IFC_Importer.h  IFC_loader_ui.cpp  IFC_loader_ui.h
modules/ifc2lcc/UI/: IFC_loader.ui  load_spaces.ui
modules/lcc2indoorgml/: IndoorGML.h  IndoorGML_reader.h  IndoorGML_writer.h  LCC2IndoorGML.cpp  LCC2IndoorGML.h  LCC2IndoorGML_Ops.h
modules/lcc2indoorgml/UI/: addthematiclayer.cpp  addthematiclayer.h  addthematiclayer.ui
